--- a/index.html
+++ b/index.html
@@ -195,9 +195,19 @@
         <div class="icons">
            <a href="https://github.com/MarahYAlosh/dashboardReact"> Source Code</a>
            <a href="https://marahyalosh.github.io/dashboardReact/"> See Live</a>
-           <!-- <a href="#"> <i class="fa-sharp fa-solid fa-user"></i></a> -->
+      
         </div>
     </div>
+</div>
+<div class="project">
+  <div class="front"><img src="./imgs/proj4.png"></div>
+  <div class="back">
+      <h3>Quiz App (MERN Stack)</h3>
+      <div class="icons">
+        <a href="https://github.com/MarahYAlosh/frontQuiz"> Source Code</a>
+        <a href="https://marahyalosh.github.io/frontQuiz"> See Live</a>
+      </div>
+  </div>
 </div>
 
 
